improved the classified create form, fixed the tags on small pc screen

--- a/frontend/bulma/sass/grid/columns.sass
+++ b/frontend/bulma/sass/grid/columns.sass
@@ -378,6 +378,7 @@ $column-gap: 0.75rem !default
     &.is-three-quarters-fullhd
       flex: none
       width: 75%
+      margin-left: 7%
     &.is-two-thirds-fullhd
       flex: none
       width: 66.6666%
